--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.2.1",
     "express-rate-limit": "^5.3.0",
+    "fast-csv": "^4.3.6",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
@@ -32,7 +33,11 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.9",
+    "prettier": "^2.6.2"
   },
   "engines": {
     "node": "16.x"
